<resources>
    <string name="app_name">ModdedBE</string>
    <string name="app_title">ModdedBE</string>
    <string name="app_summary">A professional NMod launcher for Minecraft.</string>
    <string name="app_version_name">1.0</string>
    <string name="title_activity_settings">Settings</string>

    <string name="app_start_game">Start Game</string>
    <string name="app_manage_nmods">Manage NMods</string>
    <string name="app_permission_denied">Permission Denied</string>
    <string name="app_message_permission_denied">Oops!ModdedBE couldn\'t gain the permission to read your storage.This is vital for launching app.Please go to the Settings to make sure that the permisssion isn\'t denied.</string>
    <string name="app_info">Info</string>
    <string name="app_loading">Loading</string>
    <string name="app_loading_summary">Loading game,please wait.</string>
    <string name="app_exit">Exit</string>
    <string name="app_text_divider">|</string>
    <string name="app_options">Options</string>
    <string name="app_fatal_message_title">Fatal Error</string>
    <string name="app_fatal_message_summary">An unexpected fatal error has occurred while initializing game.Please analyse this error or send it to developers.If this occurred again,consider clearing app data.</string>
    <string name="app_app_data_cleared">Cleared</string>
    <string name="app_clear_data">Clear Data</string>
    <string name="app_copy">Copy</string>
    <string name="app_copied">Copied</string>
    <string name="app_fatal_version_name">Version: %1$s</string>
    <string name="app_fatal_game_version">Game Version: %1$s</string>
    <string name="app_fatal_endercore_sdk">EnderCore SDK: %1$d</string>
    <string name="app_fatal_os_sdk">OS SDK: %1$d</string>
    <string name="app_fatal_brand">Brand: %1$s</string>
    <string name="app_fatal_model">Model: %1$s</string>
    <string name="app_fatal_use_nmods">Use NMods: %1$d</string>
    <string name="app_fatal_abi">ABI: %1$s</string>
    <string name="app_options_title_launcher">Launcher</string>
    <string name="app_options_title_nmods">NMods</string>
    <string name="app_options_use_nmods">Use NMods</string>
    <string name="app_options_auto_license">License the game automatically</string>
    <string name="app_options_redirect_game_directory">Redirect game directory</string>
    <string name="app_options_unlock_mjscript">Unlock Script Engine (Not yet implemented)</string>
    <string name="app_options_manage_nmods">Manage NMods</string>
    <string name="app_options_install_new_nmods">Install NMods</string>
    <string name="app_options_title_info">Info</string>
    <string name="app_options_about_us">About us</string>
    <string name="app_contributors" translatable="false">Contributors: listerily, TimScriptov, TripleCamera</string>
    <string name="app_translators">Translators: listerily</string>
    <string name="app_wiki">Wiki</string>
    <string name="app_source">Sources</string>
    <string name="app_issues">Issues</string>
    <string name="app_updates">Updates</string>
    <string name="app_nmod_package_open_failed_title">Oops!</string>
    <string name="app_nmod_package_open_failed_summary">Failed to open this NMod package. Please read these error messages and fix them.\n</string>
    <string name="app_nmod_install_message">Do you want to install %1$s ?</string>
    <string name="app_nmod_install">Install</string>
    <string name="app_nmod_cancel">Cancel</string>
    <string name="app_nmod_install_succeed_title">Installing Succeed</string>
    <string name="app_nmod_install_failed_message">Please read the exception message:\n</string>
    <string name="app_nmod_install_succeed_message">Enjoy your NMod!</string>
    <string name="app_nmod_install_failed_title">Installing Failed</string>
    <string name="app_nmod_icon">The Icon of the NMod.</string>
    <string name="app_nmod_remove">Remove</string>
</resources>