<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/app_options_title_launcher">

        <SwitchPreferenceCompat
            app:key="auto_license"
            app:title="@string/app_options_auto_license"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="redirect_directory"
            app:title="@string/app_options_redirect_game_directory"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="unlock_mjscript"
            app:title="@string/app_options_unlock_mjscript"
            app:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_options_title_nmods">

        <SwitchPreferenceCompat
            app:key="use_nmods"
            app:title="@string/app_options_use_nmods"
            app:defaultValue="false"/>

        <Preference
            android:key="manage"
            android:dependency="use_nmods"
            android:title="@string/app_options_manage_nmods" />

        <Preference
            android:key="install"
            android:dependency="use_nmods"
            android:title="@string/app_options_install_new_nmods" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_options_title_info">
        <Preference
            android:key="info"
            android:title="@string/app_options_about_us" />

    </PreferenceCategory>

</PreferenceScreen>