<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_activity_background"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:gravity="center">

        <ImageView
            android:layout_width="139dp"
            android:layout_height="139dp"
            app:srcCompat="@drawable/ic_logo"
            android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginStart="30dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/app_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version_name"
            android:layout_marginStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_options"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onMenuClicked"
                android:textSize="18sp"
                android:textColor="@drawable/text_selector"
                android:background="@drawable/text_background_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_text_divider"
                android:textSize="18sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onStartGameClicked"
                android:text="@string/app_start_game"
                android:textSize="18sp"
                android:textColor="@drawable/text_selector"
                android:background="@drawable/text_background_selector"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewSummary"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_summary" />

    </LinearLayout>


    </LinearLayout>